--- a/src/app/gifs/ui/gifs-item/gifs-item.component.html
+++ b/src/app/gifs/ui/gifs-item/gifs-item.component.html
@@ -2,7 +2,7 @@
   <a [routerLink]="['/gifs/detail', gif.id]"
     ><img
       [ngStyle]="{
-        'background-color': gif.images.fixed_width.height % 3 === 0 ? '#F2BC1B' : '#1BA1F2'
+        'background-color': '#' + randomColor
       }"
       [src]="thumbnailDisplay ? gif.images.fixed_width.webp : gif.images.original.webp"
       [width]="thumbnailDisplay ? gif.images.fixed_width.width : gif.images.original.width"
